--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: notifier
 description: Update any widget, from anywhere at anytime.
 version: 0.0.1
-author: Gurleen Sethi
+author: Gurleen Sethi <contactgurleensethi@gmail.com>
 homepage: https://github.com/gurleensethi/notifier
 
 environment:
